[package]
name = "rusty-rules"
version = "0.1.0"
edition = "2021"

[features]
default = []
send = []
validation = ["dep:jsonschema"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.11"
ipnet = "2"
ipnet-trie = "0.3"
thiserror = "2.0"
jsonschema = { version = "0.30", optional = true }

[dev-dependencies]
criterion = "0.5"
static_assertions = "1.1"
mlua = { version = "0.10", features = ["lua54", "vendored"] }
tokio = { version = "1", features = ["full"] }
vrl = "0.23"

[[bench]]
name = "benchmark"
harness = false
