[package]
name = "rusty-rules"
version = "0.1.0"
authors = ["Aleksandr Orlenko <zxteam@pm.me>"]
edition = "2021"
repository = "https://github.com/khvzak/rusty-rules"
documentation = "https://docs.rs/rusty-rules"
readme = "README.md"
license = "MIT"
description = """
A blazingly fast, flexible, and extensible rules engine written in Rust.
"""

[package.metadata.docs.rs]
features = ["validation"]

[features]
default = []
send = []
validation = ["dep:jsonschema"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.11"
ipnet = "2"
ipnet-trie = "0.3"
thiserror = "2.0"
jsonschema = { version = "0.30", optional = true }

[dev-dependencies]
criterion = "0.6"
static_assertions = "1.1"
mlua = { version = "0.10", features = ["lua54", "vendored"] }
tokio = { version = "1", features = ["full"] }
vrl = "0.24"

[[bench]]
name = "benchmark"
harness = false
